# anytype-mcp

./: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  smithery.yaml
.github/: copilot_instructions.md
.github/workflows/: ci.yml  release.yml
cli/: openapi-client.ts
cli/__tests__/: openapi-client.test.ts
rust/: Cargo.toml  FINAL_REPORT.md  INTERIM_STATUS.md  README.md  STATUS.md  conversion_approach.md  test-api.json
rust/examples/: basic_usage.rs  schema_test.rs  test_server.rs  test_tool.rs  test_with_real_spec.rs
rust/src/: lib.rs  main.rs
rust/src/auth/: key_generator.rs  mod.rs
rust/src/client/: http_client.rs  mod.rs
rust/src/config/: mod.rs
rust/src/openapi/: mod.rs  parser.rs
rust/src/server/: comprehensive_tests.rs  comprehensive_tests_temp.rs  hybrid_server.rs  json_rpc_server.rs  mcp_server.rs  mod.rs  tests.rs  tests_temp.rs
rust/src/utils/: error.rs  mod.rs
scripts/: install.ts  openapi.json  parse-openapi.ts  start-proxy.ts  start-server.ts  tools.json  types.ts
scripts/__tests__/: parse-openapi.test.ts  start-proxy.test.ts  start-server.test.ts
src/: init-server.ts
src/auth/: get-key.ts
src/client/: http-client.ts
src/client/__tests__/: http-client-upload.test.ts  http-client.integration.test.ts  http-client.test.ts
src/mcp/: proxy.ts
src/mcp/__tests__/: proxy.test.ts
src/openapi/: parser.ts
src/openapi/__tests__/: parser.test.ts
